# C-web-framework

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  config.json
app/: CMakeLists.txt
app/auth/: CMakeLists.txt  auth.c  auth.h  password_validator.c  password_validator.h
app/broadcasting/: mybroadcast.c
app/contexts/: CMakeLists.txt  httpcontext.c  httpcontext.h  wscontext.c  wscontext.h
app/middlewares/: httpmiddlewares.c  httpmiddlewares.h  middlewarelist.c  middlewarelist.h  wsmiddlewares.c  wsmiddlewares.h
app/models/: CMakeLists.txt  auth.c  auth.h  permission.c  permission.h  permissionview.c  permissionview.h  role.c  role.h  role_permission.c  role_permission.h  roleview.c  roleview.h  user.c  user.h  user_role.c  user_role.h  userview.c  userview.h
app/routes/: CMakeLists.txt
app/routes/auth/: auth.c  session.c
app/routes/email/: email.c
app/routes/files/: files.c
app/routes/httpclient/: httpclient.c
app/routes/index/: index.c
app/routes/json/: json.c
app/routes/middleware/: middleware_example.c
app/routes/models/: modell.c  modeluser.c  modeluserview.c
app/routes/ws/: wsindex.c
apps/migrate/: CMakeLists.txt  main.c
apps/server/: CMakeLists.txt  main.c
backend/: CMakeLists.txt  config.json
backend/app/auth/: CMakeLists.txt  auth.c  email_validator.c  email_validator.h
backend/app/broadcasting/: mybroadcast.h
backend/app/contexts/: CMakeLists.txt  httpcontext.h  httpctx.c  httpctx.h  wsctx.c  wsctx.h
backend/app/middlewares/: CMakeLists.txt  httpmiddlewares.c  httpmiddlewares.h  wsmiddlewares.c  wsmiddlewares.h
backend/app/migrations/s1/: 2023-04-04_17-55-00_create_user_table.c  2024-08-29_21-59-11_create_role_table.c  2024-08-29_21-59-48_create_permission_table.c  2024-08-29_22-00-07_create_user_role_table.c  2024-08-29_22-00-15_create_role_permission_table.c
backend/app/migrations/s2/: 2023-04-04_17-55-01_create_users_tables.c
backend/app/models/: permission.c  permission.h  permissionview.c  permissionview.h  prepare_statements.c  role.c  role.h  role_permission.c  role_permission.h  roleview.c  roleview.h  user.c  user.h  user_role.c  user_role.h  userview.c  userview.h
backend/app/routes/: CMakeLists.txt
backend/app/routes/auth/: auth.c  session.c
backend/app/routes/db/: db.c
backend/app/routes/files/: files.c
backend/app/routes/index/: index.c
backend/app/routes/middleware/: middleware.c
backend/app/routes/models/: modeluser.c  modeluserview.c
backend/app/routes/ws/: wsindex.c
backend/app/views/: header.tpl  index.tpl  json.txt
broadcasting/: CMakeLists.txt  mybroadcast.c
cmake/: FindMySQL.cmake  FindPCRE.cmake  FindPostgreSQL.cmake  FindRedis.cmake
core/: CMakeLists.txt
core/apps/: CMakeLists.txt
core/apps/migrate/: CMakeLists.txt  main.c
core/libs/database/: CMakeLists.txt  database.c  database.h  db.h  dbquery.c  dbquery.h  dbresult.c  dbresult.h  mysql.c  mysql.h  postgresql.c  postgresql.h  redis.c  redis.h
frontend/: .gitignore  README.md  base64.md  db.md  domains.md  examples-db.md  examples-json.md  examples-req-res.md  hot-reload.md  http-client.md  http-codes.md  index.md  introduction.md  json.md  logging.md  mail.md  middleware.md  migrations.md  model.md  package.json  requests.md  responses.md  routing.md  session.md  storage.md  view.md  wsbroadcast.md  wspayload.md  wsrequests.md  wsresponses.md
frontend/.vitepress/: config.js
frontend/docs/: auth.md  base64.md  build-and-run.md  config.md  cookie.md  db.md  domains.md  examples-db.md  examples-json.md  examples-req-res.md  hot-reload.md  http-client.md  http-codes.md  i18n.md  index.md  install.md  introduction.md  json.md  logging.md  mail.md  middleware.md  migrations.md  model.md  payload.md  prepared-statements.md  query-params.md  requests.md  responses.md  routing.md  session.md  ssl-certs.md  storage.md  task-manager.md  view.md  wsbroadcast.md  wspayload.md  wsrequests.md  wsresponses.md
frontend/en/: auth.md  base64.md  build-and-run.md  config.md  cookie.md  db.md  domains.md  examples-db.md  examples-req-res.md  hot-reload.md  http-client.md  http-codes.md  index.md  install.md  introduction.md  json.md  logging.md  middleware.md  migrations.md  payload.md  query-params.md  requests.md  responses.md  routing.md  session.md  ssl-certs.md  view.md  wsbroadcast.md  wspayload.md  wsrequests.md  wsresponses.md
frontend/public/: robots.txt
handlers/: CMakeLists.txt  clientpage.c  filepage.c  indexpage.c  mailpage.c  scheduler_broadcast.c  wsindexpage.c
libs/broadcast/: CMakeLists.txt  broadcast.c  broadcast.h
libs/client/: httpclient.c  (+2 more)
libs/moduleloader/: CMakeLists.txt  moduleloader.c  moduleloader.h
libs/protocols/: CMakeLists.txt  http1.c  http1.h  http1common.c  http1common.h  http1internal.c  http1internal.h  listener.c  listener.h  protocolmanager.c  protocolmanager.h  smtpinternal.c  smtpinternal.h  tls.c  tls.h  tlsinternal.c  tlsinternal.h  websockets.c  websockets.h  websocketscommon.c  websocketscommon.h  websocketsinternal.c  websocketsinternal.h  websocketsprotocoldefault.c  websocketsprotocoldefault.h  websocketsprotocolresource.c  websocketsprotocolresource.h
migration/: CMakeLists.txt  main.c
migrations/: .gitignore  CMakeLists.txt  main.c
migrations/s1/: 2023-04-04_17-55-00_create_users_table.c  2023-04-11_21-29-18_test_room_table.c  2023-04-11_21-29-34_test_project_table.c
migrations/s2/: 2023-04-04_17-55-01_create_users_tables.c
migrations/src/: 2023-04-04_17-55-00_create_users_table.c
schedulers/: CMakeLists.txt  broadcast.c  broadcast.h
src/: main.c  main.cpp  range.c
tests/: CMakeLists.txt  common.cpp  common.h
tests/config/: CMakeLists.txt  config.json  getConfigPath.cpp  getPath.cpp  getPathConfigFile.cpp  load.cpp  loadConfig.cpp  reload.cpp  reloadConfig.cpp  saveConfigPath.cpp  savePath.cpp
tests/config/loadConfig/: loadConfig.cpp
tests/helpers/: CMakeLists.txt  test2.cpp
tests/helpers/fileSize/: fileSize.cpp
tests/helpers/readFile/: readFile.cpp
views/: header.tpl  index.tpl  json.txt  menu-item.tpl  menu.tpl
(+412 files in other folders)
